tests/NormalTests/paczka2/big_fuzzy/33818363.err
Error in line 3: A781 A781 8,7
Error in line 4: S0CZBLrTG A6 23,8
Error in line 22: ddR13VKexVG A654 57,5
Error in line 27: A781 A409 -1,6
Error in line 31: ZQLXM A654 31,30
Error in line 37: YV6JcHsqARR A654 2,9
Error in line 44: PAch A6 27,1
Error in line 11: A781 A409 39,6
Error in line 52: PAch A409 13,4
Error in line 60: PAch A654 25,0
Error in line 25: ddR13VKexVG A6 80,9
Error in line 54: A781 A654 1,0
Error in line 68: A781 A409 24,8
Error in line 62: PAch A6 89,4
Error in line 72: YV6JcHsqARR A781 68,2
Error in line 81: YV6JcHsqARR A409 61,7
Error in line 82: S0CZBLrTG A654 348,5
Error in line 42: ZQLXM A654 214,9
Error in line 84: A781 A6 44,7
Error in line 93: vKMS9Za4dFa A654 55,9
Error in line 109: A781 A6 -2,4
Error in line 107: ddR13VKexVG A6 21,9
Error in line 106: vKMS9Za4dFa A6 39,0
Error in line 113: vKMS9Za4dFa A409 89,26
Error in line 86: PAch A409 98,1
Error in line 111: vKMS9Za4dFa A409 39,3
Error in line 114: S0CZBLrTG A654 4,5
Error in line 124: PAch A781 -4,5
Error in line 117: ddR13VKexVG A6 53,2
Error in line 94: ZQLXM A6 175,3
Error in line 143: PAch A409 91,3
Error in line 138: vKMS9Za4dFa A6 41,7
Error in line 152: ZQLXM A6 96,8
Error in line 149: YV6JcHsqARR A781 5,9
Error in line 156: ddR13VKexVG A781 20,93
Error in line 166: A781 A654 55,36
Error in line 159: PAch A654 22,6
Error in line 168: PAch A409 83,3
Error in line 182: S0CZBLrTG A654 83,4
Error in line 177: vKMS9Za4dFa A6 82,5
Error in line 184: S0CZBLrTG A6 66,5
Error in line 186: S0CZBLrTG A781 95,5
Error in line 188: S0CZBLrTG A409 71,5
Error in line 190: S0CZBLrTG A654 79,5
Error in line 167: A781 A654 182,9
Error in line 194: ddR13VKexVG A781 133,9
Error in line 203: vKMS9Za4dFa A6 34,2
Error in line 210: vKMS9Za4dFa A781 13,3
Error in line 225: A781 A654 12,3
Error in line 223: vKMS9Za4dFa A781 97,7
Error in line 230: vKMS9Za4dFa A6 19,1
Error in line 238: A781 A654 68,86
Error in line 233: vKMS9Za4dFa A781 95,0
Error in line 239: vKMS9Za4dFa A409 81,1
Error in line 232: A781 A654 54,0
Error in line 243: A781 A6 81,9
Error in line 248: ddR13VKexVG A654 69,40
